# Fuzzy-Logic-

./: .env.example  .gitignore  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  USAGE.md  package.json  start.sh
backend/: README.md  pyproject.toml  start.sh  test_fuzzy.py
backend/src/api/: main.py
backend/src/fuzzy/: __init__.py  engine.py  membership.py
frontend/: DIAGNOSTIC_STEPS.md  QUICK_START.md  ROOT_CAUSE_ANALYSIS.md  fix-env.sh  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  main.tsx  types.ts
frontend/src/components/: InputControls.tsx  MembershipChart.tsx  OutputChart.tsx  RuleViewer.tsx  index.ts
frontend/src/pages/: LandingPage.css  LandingPage.tsx
